@@ -3,15 +3,15 @@ package rip.deadcode.abukuma3.jetty.internal.value;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterators;
+import com.google.common.net.MediaType;
 import org.eclipse.jetty.server.Request;
-import rip.deadcode.abukuma3.AbuExecutionContext;
-import rip.deadcode.abukuma3.internal.utils.Uncheck;
-import rip.deadcode.abukuma3.value.AbuRequestHeader;
+import rip.deadcode.abukuma3.ExecutionContext;
+import rip.deadcode.abukuma3.value.RequestHeader;
 import rip.deadcode.abukuma3.value.Cookie;
 import rip.deadcode.abukuma3.value.internal.CookieImpl;
 
 import javax.annotation.Nullable;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.Charset;
 import java.util.Arrays;
 import java.util.List;
@@ -20,20 +20,21 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import static rip.deadcode.abukuma3.internal.utils.Try.possibly;
+import static rip.deadcode.abukuma3.internal.utils.Uncheck.uncheck;
 
 
 // TODO Should be integrated into the AbuHeader
-public final class JettyRequestHeader implements AbuRequestHeader {
+public final class JettyRequestHeader implements RequestHeader {
 
-    private final AbuExecutionContext context;
+    private final ExecutionContext context;
     private final Request jettyRequest;
 
-    public JettyRequestHeader( AbuExecutionContext context, Request jettyRequest ) {
+    public JettyRequestHeader( ExecutionContext context, Request jettyRequest ) {
         this.context = context;
         this.jettyRequest = jettyRequest;
     }
 
-    @Override public AbuExecutionContext context() {
+    @Override public ExecutionContext context() {
         return context;
     }
 
@@ -41,11 +42,19 @@ public final class JettyRequestHeader implements AbuRequestHeader {
         return jettyRequest.getMethod();
     }
 
-    @Override public URL url() {
-        return Uncheck.uncheck( () -> new URL( jettyRequest.getRequestURL().toString() ) );
+    @Override public URI url() {
+        return uncheck( () -> new URI(
+                jettyRequest.getScheme(),
+                null,
+                jettyRequest.getServerName(),
+                jettyRequest.getServerPort(),
+                jettyRequest.getRequestURI(),
+                jettyRequest.getQueryString(),
+                null
+        ) );
     }
 
-    @Override public String requestUri() {
+    @Override public String urlString() {
         return jettyRequest.getRequestURI();
     }
 
@@ -92,7 +101,11 @@ public final class JettyRequestHeader implements AbuRequestHeader {
     }
 
     @Override public String contentType() {
-        return jettyRequest.getContentType();
+        return mediaType().withoutParameters().toString();
+    }
+
+    @Override public MediaType mediaType() {
+        return MediaType.parse( jettyRequest.getContentType() );
     }
 
     @Override public Optional<Charset> charset() {
