@@ -1,12 +1,13 @@
 package rip.deadcode.abukuma3.netty.internal.value;
 
-import rip.deadcode.abukuma3.AbuExecutionContext;
+import com.google.common.net.MediaType;
+import rip.deadcode.abukuma3.ExecutionContext;
 import rip.deadcode.abukuma3.netty.internal.NettyHandler;
-import rip.deadcode.abukuma3.value.AbuRequestHeader;
+import rip.deadcode.abukuma3.value.RequestHeader;
 import rip.deadcode.abukuma3.value.Cookie;
 
 import javax.annotation.Nullable;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.Charset;
 import java.util.List;
 import java.util.Optional;
@@ -15,18 +16,18 @@ import java.util.Set;
 import static rip.deadcode.abukuma3.internal.utils.Uncheck.uncheck;
 
 
-public class NettyRequestHeader implements AbuRequestHeader {
+public class NettyRequestHeader implements RequestHeader {
 
-    private final AbuExecutionContext context;
+    private final ExecutionContext context;
     private final NettyHandler.RequestAndContent request;
 
-    public NettyRequestHeader( AbuExecutionContext context, NettyHandler.RequestAndContent request ) {
+    public NettyRequestHeader( ExecutionContext context, NettyHandler.RequestAndContent request ) {
         this.context = context;
         this.request = request;
     }
 
     @Override
-    public AbuExecutionContext context() {
+    public ExecutionContext context() {
         return context;
     }
 
@@ -36,12 +37,12 @@ public class NettyRequestHeader implements AbuRequestHeader {
     }
 
     @Override
-    public URL url() {
-        return uncheck( () -> new URL( request.request.uri() ) );
+    public URI url() {
+        return uncheck( () -> new URI( request.request.uri() ) );
     }
 
     @Override
-    public String requestUri() {
+    public String urlString() {
         return request.request.uri();
     }
 
@@ -73,6 +74,10 @@ public class NettyRequestHeader implements AbuRequestHeader {
 
     @Override
     public String contentType() {
+        return null;
+    }
+
+    @Override public MediaType mediaType() {
         return null;
     }
 
